--- a/OdeToFood/OdeToFood/OdeToFood.csproj
+++ b/OdeToFood/OdeToFood/OdeToFood.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Models\OdeToFoodDB.cs" />
     <Compile Include="Models\Restaurant.cs" />
     <Compile Include="Models\RestaurantReview.cs" />
+    <Compile Include="Models\RestaurantViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
